[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/StartBackGround.png" type="Texture" id=1]
[ext_resource path="res://Assets/AnimasiButton-removebg-preview.png" type="Texture" id=2]
[ext_resource path="res://Assets/BackHover-removebg-preview.png" type="Texture" id=3]
[ext_resource path="res://Assets/BackButton.png" type="Texture" id=4]
[ext_resource path="res://Assets/CustomButton-removebg-preview.png" type="Texture" id=5]
[ext_resource path="res://Scripts/start.gd" type="Script" id=6]
[ext_resource path="res://Assets/CustomHover-removebg-preview.png" type="Texture" id=7]
[ext_resource path="res://Assets/AnimationHover-removebg-preview.png" type="Texture" id=8]

[node name="Start" type="Node2D"]
script = ExtResource( 6 )

[node name="BackgroundLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="BackgroundLayer"]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 0.53314, 0.557292 )
texture = ExtResource( 1 )

[node name="ButtonLayer" type="CanvasLayer" parent="."]

[node name="BackButton" type="TextureButton" parent="ButtonLayer"]
margin_left = -25.0
margin_top = 7.0
margin_right = 641.0
margin_bottom = 382.0
rect_scale = Vector2( 0.213823, 0.242567 )
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 3 )

[node name="CustomButton" type="TextureButton" parent="ButtonLayer"]
margin_left = 343.0
margin_top = 134.0
margin_right = 1029.0
margin_bottom = 498.0
rect_scale = Vector2( 0.478578, 0.547934 )
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 7 )

[node name="AnimasiButton" type="TextureButton" parent="ButtonLayer"]
margin_left = 342.0
margin_top = 296.0
margin_right = 1029.0
margin_bottom = 659.0
rect_scale = Vector2( 0.494371, 0.553081 )
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 8 )

[connection signal="pressed" from="ButtonLayer/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="ButtonLayer/CustomButton" to="." method="_on_CustomButton_pressed"]
[connection signal="pressed" from="ButtonLayer/AnimasiButton" to="." method="_on_AnimasiButton_pressed"]
